Update changelog to include new features

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+What's new in version 3.2.2
+
+* Really cool new features!
+
 What's new in version 3.2.1
 
 * Fix setting to show all branches collapsed by default
